@@ -276,21 +276,6 @@ void rpmFreeRpmrc(void)
 /* ==================================================================== */
 /** \name RPMTS */
 /*@{*/
-/**
- * @todo Generalize filter mechanism.
- */
-typedef enum rpmprobFilterFlags_e {
-    RPMPROB_FILTER_NONE		= 0,
-    RPMPROB_FILTER_IGNOREOS	= (1 << 0),	/*!< from --ignoreos */
-    RPMPROB_FILTER_IGNOREARCH	= (1 << 1),	/*!< from --ignorearch */
-    RPMPROB_FILTER_REPLACEPKG	= (1 << 2),	/*!< from --replacepkgs */
-    RPMPROB_FILTER_FORCERELOCATE= (1 << 3),	/*!< from --badreloc */
-    RPMPROB_FILTER_REPLACENEWFILES= (1 << 4),	/*!< from --replacefiles */
-    RPMPROB_FILTER_REPLACEOLDFILES= (1 << 5),	/*!< from --replacefiles */
-    RPMPROB_FILTER_OLDPACKAGE	= (1 << 6),	/*!< from --oldpackage */
-    RPMPROB_FILTER_DISKSPACE	= (1 << 7),	/*!< from --ignoresize */
-    RPMPROB_FILTER_DISKNODES	= (1 << 8)	/*!< from --ignoresize */
-} rpmprobFilterFlags;
 
 /**
  * We pass these around as an array with a sentinel.
