@@ -1,4 +1,5 @@
 5.0a4 -> 5.0b1:
+    - rpm.org: Move rpmprobFilterFlag enums to rpmps where they logically belong
     - rpm.org: Move rpmtransFlags enums to rpmts.h where it logically belongs.
     - jbj: hijack rse's versioning name space, add to *.rpm packages too.
     - jbj: fix: rpmbuild -ba dir/foo.spec was broken.
